--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!doctype html>
 
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Music History</title>
-  <link rel="stylesheet" href="css/styles.css">
-</head>
+	<head>
+	  <meta charset="utf-8">
+	  <title>Music History</title>
+	  <link rel="stylesheet" href="css/styles.css">
+	</head>
 
-<body>
-	<!-- main wrapper -->
-	<div id="wrapper">
+	<body>
+		<!-- main wrapper -->
+		<div id="wrapper">
 
 		<!-- header -->
 		<header id="header" class="flex">
@@ -38,15 +38,11 @@
 						<option value="danny-brown">Danny Brown</option>
 						<option value="vince-staples">Vince Staples</option>
 						<option value="gaslamp-killer">Gaslamp Killer</option>
-						<option value="schoolboy-q">Schoolboy Q</option>
-						<option value="anderson-paak">Anderson Paak</option>
-						<option value="kendrick-lamaar">Kendrick Lamaar</option>
-						<option value="tune-yards">Tune-Yards</option>
  					</select>
 				</div>
 				<div id="album-select">
 					<h4>Album:</h4>
-					<select id="album-option"></select>
+					<select id="album-option">
 						<option value="the-money-store">The Money Store</option>
 						<option value="goverment-plates">Goverment Plates</option>
 						<option value="halfaxa">Halfaxa</option>
@@ -54,19 +50,13 @@
 						<option value="run-the-jewels">Run the Jewels</option>
 						<option value="run-the-jewels-2">Run the Jewels 2</option>
 						<option value="run-the-jewels-3">Run the Jewels 3</option>
-						<option value=""></option>
-						<option value=""></option>
-						<option value=""></option>
-						<option value=""></option>
-						<option value=""></option>
-						<option value=""></option>
-						<option value=""></option>
-						<option value=""></option>
-						<option value=""></option>
-						<option value=""></option>
-						<option value=""></option>
-						<option value=""></option>
-						<option value=""></option>
+						<option value="hybrid">Hybrid</option>
+						<option value="atrocity-exhibition">Atrocity Exhibition</option>
+						<option value="prima-donna">Prima Donna</option>
+						<option value="summertime-06">Summertime '06</option>
+						<option value="lavender-am">Lavender AM</option>
+						<option value="breakthrough">Breakthrough</option>
+					</select>
 				</div>
 				<div id="genre-select">
 					<h4>Genre:</h4>
@@ -83,14 +73,26 @@
 			</div>
 		</div><!-- sidebar -->
 
+		<!-- song information display -->
+		<div id="song-display-wrapper" class="right-justify">
+			<div id="song-display">
+ 				<div>
+	 				<h1>Need Another Drink</h1>
+					<p> Danny Brown | Hybrid | Hip Hop </p>
+				</div>
+				<div>
+					<h1>Norf Norf</h1>
+					<p> Vince Staples | Summertime '06 | Hip Hop </p>
+				<div>
+					<h1>Get Got</h1>
+					<p>Death Grips | The Money Store | Hip Hop </p>	
+				</div>
+				<div>
+					<h1>Love Again (akinyele back)</h1>
+					<p>Run the Jewels | Run the Jewels 2 | Hip Hop </p>
+				</div>
+			</div><!-- song information display -->
 
-		<div id="main-display-wrapper" class="right-justify">
-			<div id="main-display">
-
-			</div>
-
-		</div>
-
-	</div><!-- main wrapper -->
-</body>
+		</div><!-- main wrapper -->
+	</body>
 </html>
