entire songs array is now being eliminated, character by character. But at least it's doing that, and programatically. This is a good day indeed.

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 					<p> Vince Staples | Summertime '06 | Hip Hop </p>
 				<div>
 					<h1>Get Got</h1>
-					<p>Death Grips | The Money Store | Hip Hop </p>	
+					<p>Death Grips | The Money Store | Hip Hop </p>
 				</div>
 				<div>
 					<h1>Love Again (akinyele back)</h1>
@@ -94,5 +94,6 @@
 			</div><!-- song information display -->
 
 		</div><!-- main wrapper -->
+		<script src="js/main.js"></script>
 	</body>
 </html>
