song title filter implemented, runs as a loop

--- a/index.html
+++ b/index.html
@@ -94,6 +94,6 @@
 			</div><!-- song information display -->
 
 		</div><!-- main wrapper -->
-		<script src="js/main.js"></script>
+		<script src="javascripts/v2.js"></script>
 	</body>
 </html>
