--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	  <meta charset="utf-8">
 	  <title>Music History</title>
 	  <link rel="stylesheet" href="css/styles.css">
+	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	</head>
 
 	<body>
